--- a/services/course/.gitignore
+++ b/services/course/.gitignore
@@ -1,33 +1,137 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+##############################
+## Java
+##############################
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+# Compiled class file
+*.class
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
 
-### STS ###
-.apt_generated
+
+##############################
+## Maven
+##############################
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.xml.bak
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+# !.mvn/wrapper/maven-wrapper.jar
+# !**/src/main/**/target/
+# !**/src/test/**/target/
+
+
+##############################
+## Gradle
+##############################
+bin/
+build/
+.gradle
+.gradletasknamecache
+gradle-app.setting
+!gradle-wrapper.jar
+
+
+##############################
+## IntelliJ
+##############################
+out/
+.idea/
+.idea
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
+
+##############################
+## Eclipse
+##############################
+.settings/
+# bin/
+tmp/
+.metadata
 .classpath
-.factorypath
 .project
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+.factorypath
+
+
+##############################
+## NetBeans
+##############################
+nbproject/private/
+/nbproject/private/
+# build/
+nbbuild/
+/nbbuild/
+dist/
+/dist/
+nbdist/
+/nbdist/
+/.nb-gradle/
+nbactions.xml
+nb-configuration.xml
+# !**/src/main/**/build/
+# !**/src/test/**/build/
+
+
+##############################
+## Visual Studio Code
+##############################
+.vscode/
+.code-workspace
+
+
+##############################
+## OS X
+##############################
+.DS_Store
+
+
+##############################
+## Miscellaneous
+##############################
+*.log
+
+
+##############################
+## STS
+##############################
+.apt_generated
+# .classpath
+# .factorypath
+# .project
 .settings
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# BlueJ files
+*.ctxt
 
-### VS Code ###
-.vscode/
+
+.env
+
+HELP.md
