update course service config

--- a/services/config-server/src/main/resources/configs/course-service.yml
+++ b/services/config-server/src/main/resources/configs/course-service.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/skills-flask
-    username: pichborith
+    username: admin
     password: password
 #    driver-class-name: org.postgresql.Driver
   jpa:
