--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: pg_sql
+    container_name: postgres_sql
     image: postgres:15-bullseye
     environment:
       POSTGRES_DB: skills-flask
@@ -10,13 +10,25 @@ services:
       - "5432:5432"
     restart: unless-stopped
     volumes:
-      - postgres_data:/var/lib/postgresql/data\
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - skills-flask-app-network
+
+  mongodb:
+    container_name: mongo_db
+    image: mongo:jammy
+    volumes:
+      - mongo_data:/var/lib/mongodb/data
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
 
 
 volumes:
   postgres_data:
+  mongo_data:
 
 
 networks:
