add user routes to gateway

--- a/services/config-server/src/main/resources/configs/gateway-service.yml
+++ b/services/config-server/src/main/resources/configs/gateway-service.yml
@@ -8,6 +8,10 @@ spring:
         locator:
           enabled: true
       routes:
+        - id: user-service
+          uri: lb:http://USER-SERVICE
+          predicates:
+            - Path=/api/users/**
         - id: course-service
           uri: lb:http://COURSE-SERVICE
           predicates:
