--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
+    networks:
+      - skills-flask-app-network
 
 
 volumes:
