--- a/services/config-server/src/main/resources/configs/course-service.yml
+++ b/services/config-server/src/main/resources/configs/course-service.yml
@@ -10,10 +10,11 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
+#      ddl-auto: validate
       default_schema: public
 #    database: postgresql
 #    database-platform: org.hibernate.dialect.PostgreSQLDialect
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
