--- a/services/config-server/src/main/resources/configs/gateway-service.yml
+++ b/services/config-server/src/main/resources/configs/gateway-service.yml
@@ -8,14 +8,12 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: auth-service
-          uri: lb:http://AUTH-SERVICE
-          predicates:
-            - Path=/api/auth/**
         - id: user-service
           uri: lb:http://USER-SERVICE
           predicates:
             - Path=/api/users/**
+#          filters:
+#            - StripPrefix=1
         - id: course-service
           uri: lb:http://COURSE-SERVICE
           predicates:
