--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -16,9 +16,10 @@ services:
 
   mongodb:
     container_name: mongo_db
-    image: mongo:jammy
+    image: mongo
     volumes:
-      - mongo_data:/var/lib/mongodb/data
+      - mongo_data:/data/db
+      - mongodb-config:/data/configdb
     ports:
       - "27017:27017"
     environment:
@@ -31,6 +32,7 @@ services:
 volumes:
   postgres_data:
   mongo_data:
+  mongodb-config:
 
 
 networks:
