--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: postgres_sql
     image: postgres:15-bullseye
     environment:
-      POSTGRES_DB: skills-flask
+      POSTGRES_DB: skills_lab_academy
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: password
     ports:
@@ -12,29 +12,29 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - skills-flask-app-network
+      - skills_lab_academy_network
 
   mongodb:
     container_name: mongo_db
     image: mongo
     volumes:
       - mongo_data:/data/db
-      - mongodb-config:/data/configdb
+      - mongodb_config:/data/configdb
     ports:
       - "27017:27017"
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
     networks:
-      - skills-flask-app-network
+      - skills_lab_academy_network
 
 
 volumes:
   postgres_data:
   mongo_data:
-  mongodb-config:
+  mongodb_config:
 
 
 networks:
-  skills-flask-app-network:
+  skills_lab_academy_network:
     driver: bridge
