change api version

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>dev.pichborith</groupId>
 	<artifactId>SkillsLabAcademyAPI</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>SkillsLabAcademyAPI</name>
 	<description>Skills Lab Academy API</description>
 	<url/>
